# flaxia

./: .gitignore  AGENT.MD  CLAUDE.MD  GEMINI.md  MIGRATION_NEXTJS.md  README.md  TODO.md  _worker.js  biome.jsonc  capacitor.config.ts  index.html  local-test-accounts.md  next.config.mjs  notes.md  package-lock.json  package.json  reproduce_delete_bug.test.ts  tasks.md  test-follow.json  test-signed-create.sh  test-signed-follow.sh  tsconfig.json  vite.config.ts  vulnerability-report.md  vulnerability_report.md  worker-configuration.d.ts  wrangler.sandbox.toml  wrangler.toml  wrangler.toml.pages  wrangler.toml.worker
.github/: dependabot.yml
do-worker/: wrangler.toml
docs/: 00-index.md  01-routing.md  01-twitter-algorithm-deep-analysis.md  02-flaxia-algorithm-analysis.md  02-signaling.md  03-comparison.md  03-task-queue.md  04-node-registry.md  04-recommendations-for-flaxia.md  05-result-collector.md  06-wrangler.md  activitypub.md  api.md  architecture.md  database.md  deployment.md  how-to-use-multiplayer.md  multiplayer.md  sandbox.md  setup.md  ssr-seo-plan.md  アーケード説明.txt  初学者ガイド.md
functions/: _middleware.ts  notifstream.ts  queue-worker.ts  sitemap.xml.ts  tsconfig.json
migrations/: 0021_fix_ad_type_constraint.sql  0029_add_polls.sql  (+34 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.android.json  tauri.conf.base.json  tauri.conf.ios.json  tauri.conf.json  tauri.conf.json.bak  tauri.conf.linux.json  tauri.conf.macos.json  tauri.conf.windows.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+249 files in other folders)
