[package]
name = "flaxia"
version = "0.1.0"
description = "Flaxia - Chronological SNS where posts are living, interactive applications"
authors = ["Flaxia"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "flaxia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
open = "5"
tauri-plugin-notification = "2"
